[gd_scene load_steps=6 format=3 uid="uid://drcwqrpibo45q"]

[ext_resource type="Script" path="res://src/exit_from_level.gd" id="1_7hlal"]
[ext_resource type="Texture2D" uid="uid://bysiyotgeom0k" path="res://Sprites/Tiles/Dungeon Tile Set.png" id="1_rllmu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qy5q8"]
texture = ExtResource("1_rllmu")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_7h7el"]
sources/0 = SubResource("TileSetAtlasSource_qy5q8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vn3wu"]
size = Vector2(48, 49)

[node name="Exit_from_level" type="Node2D"]
script = ExtResource("1_7hlal")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7h7el")
format = 2
layer_0/tile_data = PackedInt32Array(-3, 327680, 1, -65534, 393216, 1, -2, 327680, 2, -65535, 393216, 2, -65538, 65536, 2, -131074, 65536, 2, -131071, 196608, 2, -196607, 196608, 2, -196610, 327680, 1, -262143, 393216, 1, -131073, 131072, 2, -65537, 131072, 2, -1, 131072, 2, -65536, 131072, 2, -131072, 131072, 2, -196608, 131072, 2, -196609, 131072, 5, -262144, 131072, 5)

[node name="Exit_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit_zone"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_vn3wu")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -7.0
offset_top = -34.0
offset_right = 7.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 10
text = "x"

[connection signal="body_entered" from="Exit_zone" to="." method="_on_exit_zone_body_entered"]
[connection signal="body_exited" from="Exit_zone" to="." method="_on_exit_zone_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
